--- a/index.html
+++ b/index.html
@@ -1,1 +1,105 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Wikimedia</title>
+		<link rel="stylesheet" type="text/css" href="styles.css">
+	</head>
+	<body>
+		<header>
+			<p><strong>Wikimedia</strong> is a global 
+				<a href = "https://meta.wikimedia.org/wiki/Wikimedia_movement">movement</a>
+				whose <a href = "https://wikimediafoundation.org/wiki/Mission_statement">mission</a>
+				is to bring free educational content to the world.
+			</p>
+			<p>
+				Through various 
+				<a href="https://wikimediafoundation.org/wiki/Our_projects">projects</a>,
+				<a href="https://meta.wikimedia.org/wiki/Wikimedia_chapters">chapters</a>,
+				and the support structure of the non-profit Wikimedia Foundation, Wikimedia 
+				<a href="https://wikimediafoundation.org/wiki/Vision">strives</a>
+				to bring about a world in which every single human being can freely share in the sum of all knowledge.
+			</p>
+			<p class="welcome">
+				<strong>Welcome to Wikimedia.</strong>
+			</p>
+		</header>
 
+
+		<div class="main">
+			<div class="row">
+				<a href="https://www.wikipedia.org/">
+					<div class="icon">
+						<img src="https://www.wikimedia.org/static/images/project-logos/enwiki.png" />
+					</div></a>
+				<a href="https://www.wiktionary.org/">
+					<div class="icon">
+						<img src="https://www.wikimedia.org/static/images/project-logos/enwiktionary.png" />
+					</div></a>
+				<a href="https://www.wikiquote.org/">
+					<div class="icon">
+						<img src="https://www.wikimedia.org/static/images/project-logos/wikiquote.png" />
+					</div></a>
+				<a href="https://www.wikibooks.org/">
+					<div class="icon">
+						<img src="https://www.wikimedia.org/static/images/project-logos/wikibooks.png" />
+					</div></a>
+			</div>
+			<div class="row">
+				<a href="https://wikisource.org/"><div class="icon">
+					<img src="https://www.wikimedia.org/static/images/project-logos/wikisource.png" /></div></a>
+				<a href="https://www.wikinews.org/"><div class="icon">
+					<img src="https://upload.wikimedia.org/wikinews/en/b/bc/Wiki.png" /></div></a>
+				<a href="https://www.wikiversity.org/"><div class="icon">
+					<img src="https://www.wikimedia.org/static/images/project-logos/enwikiversity.png" /></div></a>
+				<a href="https://species.wikimedia.org/"><div class="icon">
+					<img src="https://www.wikimedia.org/static/images/project-logos/specieswiki.png" /></div></a>
+			</div>
+			<div class="row">
+				<a href="https://www.mediawiki.org/">
+				<div class="icon">
+						<img src="https://www.wikimedia.org/static/images/project-logos/mediawikiwiki.png" />
+				</div></a>
+				<a href="https://www.wikidata.org/">
+				<div class="icon">
+						<img src="https://www.wikimedia.org/static/images/project-logos/wikidatawiki.png" />
+				</div></a>
+				<a href="https://commons.wikimedia.org/">
+				<div class="icon">
+						<img src="https://www.wikimedia.org/static/images/project-logos/commonswiki.png" />
+				</div></a>
+				<a href="https://www.wikivoyage.org/">
+				<div class="icon">
+						<img src="https://www.wikimedia.org/static/images/project-logos/wikivoyage.png" />
+				</div></a>
+			</div>
+			<div class="row">
+				<a href="https://meta.wikimedia.org/">
+				<div class="icon">
+						<img src="https://www.wikimedia.org/static/images/project-logos/metawiki.png" />
+				</div></a>
+				<a href="https://incubator.wikimedia.org/">
+				<div class="icon">
+						<img src="https://www.wikimedia.org/static/images/project-logos/incubatorwiki.png" />
+				</div></a>
+				<a href="https://wikitech.wikimedia.org/">
+				<div class="icon">
+						<img src="https://wikitech.wikimedia.org/w/images/c/cf/Labslogo_thumb.png" />
+				</div></a>
+				<a href="https://wikimediafoundation.org/">
+				<div class="icon">
+						<img src="https://www.wikimedia.org/static/images/project-logos/foundationwiki.png" />
+				</div></a>
+			</div>
+		</div>
+
+
+		<footer>
+			<div class="fBorder"></div>
+			<p>Imagine a world in which every single human being can freely share in the sum of all knowledge. That's our commitment.</p>
+			<p>
+				<a href="https://wikimediafoundation.org/wiki/Terms_of_Use">Terms of use</a>
+				<a href="https://wikimediafoundation.org/wiki/Privacy_policy">Privacy policy</a>
+			</p>
+		</footer>
+	</body>
+</html>
